--- a/missingkids/less/missing-anniversary.less
+++ b/missingkids/less/missing-anniversary.less
@@ -4,31 +4,45 @@
         padding-right:8px;
     }
     .missing-anniversary-grid {
-
-        margin-left: -16px;
-        margin-right: -16px;
-        color:@white;
-
-
-        .grid-item{ 
-            margin-bottom:16px;
-            border-radius:10px;
+        .clearfix();
+        padding: 0 8px;
+        .anniversaries-grid-element {
+            color: @white;
+            border-radius: 10px;
             background: @gray-darkest;
-            img {
-                border-top-left-radius: 10px;
-                border-top-right-radius: 10px;
-                width:100%;
+            margin: 0 0 16px;
+            padding: 0;
+            position: relative;
+            &.col-md-4 {
+                width: 31.8%;
+                margin-right: 16px;
             }
-            .image-desc{
-                padding:16px;
+            &:nth-child(3n+3) { 
+                margin-right: 0; 
             }
-
-            a {
-                &.kid-name{
-                    font-family: Futura;
+            .grid-item{            
+                
+                img {
+                    border-top-left-radius: 10px;
+                    border-top-right-radius: 10px;
+                    width:100%;
+                }
+                .image-desc{
+                    padding: 16px;
+                    .link {
+                        position: absolute;
+                        bottom: 16px;
+                        right: 16px;
+                    }
                 }
 
-                color:@blue-lighter;
+                a {
+                    &.kid-name{
+                        font-family: Futura;
+                    }
+
+                    color:@blue-lighter;
+                }
             }
         }
     }
@@ -50,9 +64,45 @@
 .anniversaries-grid-element{
     position: relative;
     a.absolute-link{
-            position: absolute;
+    position: absolute;
     bottom: 0;
     right: 0;
     }
 }
 
+@media(max-width: @screen-sm) {
+    .missing-anniversary-container {
+        .missing-anniversary-grid {
+            padding: 0 6.5px;
+            .anniversaries-grid-element {            
+                &.col-sm-4 {
+                    width: 31.8%;
+                    margin-right: 13px;
+                    &:nth-child(3n+3) { 
+                        margin-right: 0; 
+                    }
+                }                        
+            }
+        }
+    }
+}
+
+@media(max-width: @screen-xs) {
+    .missing-anniversary-container {
+        .missing-anniversary-grid {
+            padding: 0 8px;
+            .anniversaries-grid-element {            
+                &.col-xs-6 {
+                    width: 47%;
+                    margin-right: 16px;
+                    &:nth-child(3n+3) { 
+                        margin-right: 16px !important; 
+                    }
+                    &:nth-child(even) { 
+                        margin-right: 0; 
+                    }
+                }                        
+            }
+        }
+    }
+}
